--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "devDependencies": {
-    "@types/jquery": "^3.5.10",
-    "typescript": "^4.5.4"
-  }
+    "devDependencies": {
+        "@types/jquery": "^3.5.10",
+        "typescript": "^4.5.4"
+    },
+    "scripts": {
+        "build": "tsc --build && find ./src -name '*.js' -exec sed -i \"\" '/Object.defineProperty(exports, \"__esModule\", { value: true });/d' {} +"
+    }
 }
