--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "devDependencies": {
         "@types/jquery": "^3.5.10",
+        "@typescript-eslint/eslint-plugin": "^5.10.0",
+        "@typescript-eslint/parser": "^5.10.0",
+        "eslint": "^8.7.0",
         "typescript": "^4.5.4"
     },
     "scripts": {
