--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "typescript": "^4.5.4"
     },
     "scripts": {
-        "build": "tsc --build && find ./src -name '*.js' -exec sed -i \"\" '/Object.defineProperty(exports, \"__esModule\", { value: true });/d' {} +"
+        "build": "tsc --build && find ./src -name '*.js' -exec sed -i \"\" '/Object.defineProperty(exports, \"__esModule\", { value: true });/d' {} +",
+        "lint": "eslint . --ext .ts"
     }
 }
